[tool.poetry]
name = "recasepunc"
version = "0.1.0"
description = "Model for recasing and repunctuating ASR transcripts"
authors = ["Benoit Favre 2021"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
regex = "^2021.11.10"
torch = "^1.10.0"
tqdm = "^4.62.3"
transformers = "^4.12.5"
mosestokenizer = { git = "https://github.com/benob/mosestokenizer.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
